Added test for adding offline account. Made improvements to openAPI yaml file.
